tests/positive/ownership_observe.safe
-- Test: ownership_observe
-- Description: Shared observation of an owned access value.
--   Multiple observers can read the designated object simultaneously.
--   No mutation is permitted through an observer.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4a.p102a:5bc5ab8b
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4a.p102a-a:ae729065
-- Expected: ACCEPT

package Ownership_Observe is

   type Config is record
      Rate  : Natural;
      Limit : Natural;
   end record;

   type Config_Ptr is access Config;

   --  Read_Rate: observes the config through a constant access parameter.
   --  The observer does not mutate the designated object.
   function Read_Rate (Ref : access constant Config) return Natural is
   begin
      return Ref.all.Rate;
   end Read_Rate;

   --  Read_Limit: another observer on the same object.
   function Read_Limit (Ref : access constant Config) return Natural is
   begin
      return Ref.all.Limit;
   end Read_Limit;

   --  Use_Observe: creates an owned config, then observes it twice.
   --  Multiple observations of the same owned object are safe.
   procedure Use_Observe is
      Owner : Config_Ptr = new ((Rate = 100, Limit = 500) as Config);
      R     : Natural;
      L     : Natural;
   begin
      R = Read_Rate (Owner);
      L = Read_Limit (Owner);
      --  Owner regains full ownership after observations end.
      --  Owner goes out of scope; automatic deallocation.
   end Use_Observe;

end Ownership_Observe;
